Public activity gem added, edited~improved front-end for many parts.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,26 +1,26 @@
 en:
+  En: "English"
+  Tr: "Türkçe"
   dashboard: "Dashboard"
   login: "Login"
   logout: "Logout"
   cancel: "Cancel"
   system_status: "System Status"
   view_details: "View Details"
-  debit: "Debit"
-  debits: "Debits"
-  users: "Users"
   show: "Show"
   edit: "Edit"
+  update: "Update"
   delete: "Delete"
   ready_to_leave: "Ready to Leave?"
   are_you_sure: "Are you sure?"
   #Users
+  users: "Users"
   listing_users: "Listing Users"
-  first_name: "First Name"
-  last_name: "Last Name"
-  email: "Email"
-  role: "Role"
-  password: "Password"
   remember_me: "Remember me"
+  account_settings: "Account Settings"
+  password_change_alert: "Leave blank if you don't want to change it"
+  current_password_alert: "We need your current password to confirm your changes"
+  minimum_password_alert: "%{length} characters minimum"
   # Products
   products: "Products"
   product: "Product"
@@ -33,6 +33,7 @@ en:
   new_group: "New Group"
   editing_group: "Editing Group"
   listing_groups: "Listing Groups"
+  members: "Members"
   #Templates
   product_templates: "Product Templates"
   templates: "Templates"
