Front-end improvements

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,9 +1,26 @@
 en:
+  activerecord:
+    attributes:
+      product:
+        name: "Name"
+        template_id: "Template"
+        company: "Company"
+        properties: "Properties"
+        year: "Year"
+        warranty: "Warranty"
+        status: "Status"
+      user:
+        first_name: "First Name"
+        last_name: "Last Name"
+        role: "Role"
+        locale: "Locale"
+        email: "Email"
+        password: "Password"
+        password_confirmation: "Password Confirmation"
+        current_password: "Current Password"
   En: "English"
-  Tr: "Türkçe"
+  Tr: "Turkish"
   dashboard: "Dashboard"
-  login: "Login"
-  logout: "Logout"
   cancel: "Cancel"
   system_status: "System Status"
   view_details: "View Details"
@@ -21,12 +38,24 @@ en:
   password_change_alert: "Leave blank if you don't want to change it"
   current_password_alert: "We need your current password to confirm your changes"
   minimum_password_alert: "%{length} characters minimum"
+  sign_up: "Sign up"
+  sign_in: "Sign in"
+  sign_out: "Sign out"
+  remember_me: "Remember me"
+  forgot_your_password: "Forgot your password?"
   # Products
   products: "Products"
   product: "Product"
+  product_name: "Product Name"
   new_product: "New Product"
   editing_product: "Editing Product"
   listing_products: "Listing Products"
+  company: "Company"
+  year: "Year"
+  warranty: "Warranty"
+  status: "Status"
+  free: "Free"
+  busy: "Busy"
   #Groups
   groups: "Groups"
   group: "Group"
