--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -18,6 +18,8 @@ tr:
         password: "Parola"
         password_confirmation: "Parola Tekrarı"
         current_password: "Kullanılan Parola"
+  En: "İngilizce"
+  Tr: "Türkçe"
   dashboard: "Pano"
   login: "Giriş"
   logout: "Çıkış"
@@ -38,12 +40,24 @@ tr:
   password_change_alert: "Değiştirmek istemiyorsanız boş bırakın"
   current_password_alert: "Mevcut şifrenizi girmelisiniz"
   minimum_password_alert: "En az %{length} karakter"
+  sign_up: "Kayıt Ol"
+  sign_in: "Giriş Yap"
+  sign_out: "Çıkış Yap"
+  remember_me: "Beni Hatırla"
+  forgot_your_password: "Şifrenizi mi unuttunuz?"
   # Products
   products: "Ürünler"
   product: "Ürün"
+  product_name: "Ürün Adı"
   new_product: "Yeni Ürün"
   editing_product: "Ürün Düzenleme"
   listing_products: "Ürünler Listeleniyor"
+  company: "Firma"
+  year: "Yıl"
+  warranty: "Garanti Süresi"
+  status: "Durum"
+  free: "Boşta"
+  busy: "Zimmetlenmiş"
   #Groups
   groups: "Gruplar"
   group: "Grup"
