--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,8 +6,9 @@ en:
         template_id: "Template"
         company: "Company"
         properties: "Properties"
-        year: "Year"
-        warranty: "Warranty"
+        year: "Purchase Year"
+        warranty: "Warranty(Month)"
+        warranty_end: "Warranty End"
         status: "Status"
       user:
         first_name: "First Name"
@@ -18,8 +19,13 @@ en:
         password: "Password"
         password_confirmation: "Password Confirmation"
         current_password: "Current Password"
-  En: "English"
-  Tr: "Turkish"
+  helpers:
+    submit:
+      create: "Create"
+      submit: "Save"
+      update: "Update"
+  en: "English"
+  tr: "Turkish"
   dashboard: "Dashboard"
   cancel: "Cancel"
   system_status: "System Status"
@@ -27,6 +33,11 @@ en:
   show: "Show"
   edit: "Edit"
   update: "Update"
+  created_message: "%{something} was successfully created."
+  updated_message: "%{something} was successfully updated."
+  destroyed_message: "%{something} was successfully destroyed."
+  destroy_error_message: "%{something} silinirken hata oluştu."
+  save: "Save"
   delete: "Delete"
   ready_to_leave: "Ready to Leave?"
   are_you_sure: "Are you sure?"
@@ -38,6 +49,11 @@ en:
   password_change_alert: "Leave blank if you don't want to change it"
   current_password_alert: "We need your current password to confirm your changes"
   minimum_password_alert: "%{length} characters minimum"
+  full_name: "Full Name"
+  email: "Email"
+  role: "Role"
+  admin: "Admin"
+  staff: "Staff"
   sign_up: "Sign up"
   sign_in: "Sign in"
   sign_out: "Sign out"
@@ -50,12 +66,16 @@ en:
   new_product: "New Product"
   editing_product: "Editing Product"
   listing_products: "Listing Products"
+  product_info: "Product Informations"
   company: "Company"
-  year: "Year"
+  properties: "Properties"
+  purchase_year: "Purchase Year"
   warranty: "Warranty"
+  warranty_end: "Warranty End"
   status: "Status"
   free: "Free"
   busy: "Busy"
+  out_of_use: "Out of Use"
   #Groups
   groups: "Groups"
   group: "Group"
@@ -73,6 +93,22 @@ en:
   #Debits
   debits: "Debits"
   debit: "Debit"
+  debit_save_success: "Debit entry is saved successfully."
+  debit_save_error: "An error occurred while saving the debit entry !"
+  current_debit: "Current Debit"
+  user_group: "User / Group"
+  end_date: "End Date"
+  listing_debits: "Listing Debits"
+  debit_true: "Active"
+  debit_false: "Inactive"
+  change_debit: "Change Current Debit"
+  change_debit_alert: "If there is an active debit record then this will be inactive."
+  debit_to_user: "Debit To User"
+  debit_to_group: "Debit To Group"
+  month: "Month"
+  no_debits: "There are not any debit records."
+  choose_user_to_debit: "Choose a user to debit."
+  choose_group_to_debit: "Choose a group to debit."
   #Logs
   logs: "Logs"
 # Files in the config/locales directory are used for internationalization
