--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -6,8 +6,9 @@ tr:
         template_id: "Şablon"
         company: "Firma"
         properties: "Özellikler"
-        year: "Yıl"
-        warranty: "Garanti Süresi"
+        year: "Satınalma Yılı"
+        warranty: "Garanti Süresi (Ay)"
+        warranty_end: "Garanti Bitişi"
         status: "Durum"
       user:
         first_name: "Ad"
@@ -18,8 +19,13 @@ tr:
         password: "Parola"
         password_confirmation: "Parola Tekrarı"
         current_password: "Kullanılan Parola"
-  En: "İngilizce"
-  Tr: "Türkçe"
+  helpers:
+    submit:
+      create: "Ekle"
+      submit: "Kaydet"
+      update: "Güncelle"
+  en: "İngilizce"
+  tr: "Türkçe"
   dashboard: "Pano"
   login: "Giriş"
   logout: "Çıkış"
@@ -29,6 +35,11 @@ tr:
   show: "Göster"
   edit: "Düzenle"
   update: "Güncelle"
+  created_message: "%{something} başarıyla oluşturuldu."
+  updated_message: "%{something} başarıyla güncellendi."
+  destroyed_message: "%{something} başarıyla silindi."
+  destroy_error_message: "Silme işlemi sırasında hata oluştu. İşleme izin verilmiyor."
+  save: "Kaydet"
   delete: "Sil"
   ready_to_leave: "Çıkış yapılacak?"
   are_you_sure: "Emin misiniz?"
@@ -40,6 +51,11 @@ tr:
   password_change_alert: "Değiştirmek istemiyorsanız boş bırakın"
   current_password_alert: "Mevcut şifrenizi girmelisiniz"
   minimum_password_alert: "En az %{length} karakter"
+  full_name: "Adı Soyadı"
+  email: "Eposta"
+  role: "Rol"
+  admin: "Yönetici"
+  staff: "Personel"
   sign_up: "Kayıt Ol"
   sign_in: "Giriş Yap"
   sign_out: "Çıkış Yap"
@@ -52,12 +68,16 @@ tr:
   new_product: "Yeni Ürün"
   editing_product: "Ürün Düzenleme"
   listing_products: "Ürünler Listeleniyor"
+  product_info: "Ürün Bilgileri"
   company: "Firma"
-  year: "Yıl"
+  properties: "Özellikler"
+  purchase_year: "Satınalma Yılı"
   warranty: "Garanti Süresi"
+  warranty_end: "Garanti Bitişi"
   status: "Durum"
   free: "Boşta"
   busy: "Zimmetlenmiş"
+  out_of_use: "Kullanım Dışı"
   #Groups
   groups: "Gruplar"
   group: "Grup"
@@ -73,7 +93,23 @@ tr:
   editing_template: "Şablon Düzenleme"
   listing_templates: "Şablonlar Listeleniyor"
   #Debits
-  debits: "Zimmetler"
+  debits: "Zimmet Kayıtları"
   debit: "Zimmet"
+  debit_save_success: "Zimmetleme işlemi başarıyla tamamlandı."
+  debit_save_error: "Zimmetleme işlemi sırasında bir hata oluştu !"
+  current_debit: "Mevcut Zimmet"
+  user_group: "Kullanıcı / Grup"
+  end_date: "Bitiş Tarihi"
+  listing_debits: "Zimmet Kayıtları Listeleniyor"
+  debit_true: "Aktif"
+  debit_false: "Pasif"
+  change_debit: "Zimmet Değişikliği Yap"
+  change_debit_alert: "Zimmetleme  işlemi, aktif bir zimmet kaydı varsa bunu pasifleştirecek."
+  debit_to_user: "Kişiye Zimmetle"
+  debit_to_group: "Gruba Zimmetle"
+  month: "Ay"
+  no_debits: "Herhangi bir zimmet kaydı bulunamadı."
+  choose_user_to_debit: "Zimmetleme işlemi için bir kişi seçiniz."
+  choose_group_to_debit: "Zimmetleme işlemi için bir grup seçiniz."
   #Logs
   logs: "Sistem Kayıtları"
