--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -70,6 +70,7 @@ en:
   sign_out: "Sign out"
   remember_me: "Remember me"
   forgot_your_password: "Forgot your password?"
+  user_not_authorized: "You are not authorized to do this!"
   # Products
   products: "Products"
   product: "Product"
@@ -107,7 +108,7 @@ en:
   my_debits: "My Debits"
   debit: "Debit"
   debit_save_success: "Debit entry is saved successfully."
-  debit_save_error: "An error occurred while saving the debit entry !"
+  debit_save_error: "An error occurred while saving the debit entry!"
   debit_remove_error: "An error occurred while removing the debit "
   current_debit: "Current Debit"
   user_group: "User / Group"
@@ -135,33 +136,3 @@ en:
   user: "User"
   action_type: "Process Type"
   date: "Date"
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
