Added feature of removing pending debit request. Also other fixes.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,10 +44,10 @@ en:
   show: "Show"
   edit: "Edit"
   update: "Update"
-  created_message: "%{something} was successfully created."
-  updated_message: "%{something} was successfully updated."
-  destroyed_message: "%{something} was successfully destroyed."
-  destroy_error_message: "%{something} silinirken hata oluştu."
+  created: "%{model} was successfully created."
+  updated: "%{model} was successfully updated."
+  destroyed: "%{model} was successfully destroyed."
+  destroy_error: "An error occurred while destroying."
   save: "Save"
   delete: "Delete"
   ready_to_leave: "Ready to Leave?"
@@ -109,7 +109,8 @@ en:
   debit: "Debit"
   debit_save_success: "Debit entry is saved successfully."
   debit_save_error: "An error occurred while saving the debit entry!"
-  debit_remove_error: "An error occurred while removing the debit "
+  debit_remove_error: "An error occurred while removing the debit!"
+  debit_cancel_error: "An error occurred while canceling the debit request!"
   current_debit: "Current Debit"
   user_group: "User / Group"
   start_date: "Start Date"
@@ -129,6 +130,7 @@ en:
   confirm_to_debit: "Confirm To Debit"
   confirm_to_remove: "Confirm To Remove"
   remove_debit: "Remove Debit"
+  cancel_debit_request: "Cancel Debit Request"
   #Logs
   logs: "Logs"
   listing_logs: "Listing Logs"
