--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -57,10 +57,10 @@ tr:
   show: "Göster"
   edit: "Düzenle"
   update: "Güncelle"
-  created_message: "%{something} başarıyla oluşturuldu."
-  updated_message: "%{something} başarıyla güncellendi."
-  destroyed_message: "%{something} başarıyla silindi."
-  destroy_error_message: "Silme işlemi sırasında hata oluştu. İşleme izin verilmiyor."
+  created: "%{model} başarıyla oluşturuldu."
+  updated: "%{model} başarıyla güncellendi."
+  destroyed: "%{model} başarıyla silindi."
+  destroy_error: "Silme işlemi sırasında hata oluştu."
   save: "Kaydet"
   delete: "Sil"
   ready_to_leave: "Çıkış yapılacak?"
@@ -120,9 +120,10 @@ tr:
   debits: "Zimmet Kayıtları"
   my_debits: "Zimmet Kayıtlarım"
   debit: "Zimmet"
-  debit_save_success: "Zimmetleme işlemi başarıyla tamamlandı."
-  debit_save_error: "Zimmetleme işlemi sırasında bir hata oluştu!"
-  debit_remove_error: "Zimmet kaldırma hatası!"
+  debit_save_success: "Zimmetleme isteği başarıyla oluşturuldu."
+  debit_save_error: "Zimmetleme isteği kaydedilirken bir hata oluştu!"
+  debit_remove_error: "Zimmet kaldırma isteği kaydedilirken bir hata oluştu!"
+  debit_cancel_error: "Zimmet isteği iptal edilirken bir hata oluştu!"
   current_debit: "Mevcut Zimmet"
   user_group: "Kullanıcı / Grup"
   start_date: "Başlangıç Tarihi"
@@ -142,6 +143,7 @@ tr:
   confirm_to_debit: "Zimmet Onayı"
   confirm_to_remove: "Kaldırma Onayı"
   remove_debit: "Zimmeti Kaldır"
+  cancel_debit_request: "Zimmet İsteğini İptal Et"
   #Logs
   logs: "Sistem Kayıtları"
   listing_logs: "Sistem Kayıtları Listeleniyor"
