Added model validations. Small changes for assigning group coordinator.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,8 @@ en:
       template:
         name: "Template Name"
         properties: "Properties"
+      group:
+        coordinator: "Coordinator"
   helpers:
     submit:
       create: "Create"
