--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -92,6 +92,7 @@ tr:
   staff: "Personel"
   responsible: "Taşınır Kayıtçı"
   manager: "Müdür"
+  change_role: "Rol Değiştir"
   sign_up: "Kayıt Ol"
   sign_in: "Giriş Yap"
   sign_out: "Çıkış Yap"
