--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -118,8 +118,9 @@ tr:
   free: "Boşta"
   busy: "Zimmetlenmiş"
   out_of_use: "Kullanım Dışı"
-  ejected: "Çıkarılmış"
+  ejected: "Envanterden Çıkarılmış"
   effaced: "İmha Edilmiş"
+  change_status: "Durumu Değiştir"
   bill: "Fatura"
   filtered: "Filtrelenmiş"
   confirmation_operations: "Onay İşlemleri"
