Added memberships management feature.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,6 +48,7 @@ en:
   cancel: "Cancel"
   system_status: "System Status"
   view_details: "View Details"
+  add: "Add"
   new: "New"
   show: "Show"
   edit: "Edit"
@@ -80,6 +81,7 @@ en:
   responsible: "Responsible"
   manager: "Manager"
   change_role: "Change Role"
+  edit_user_groups: "Edit User Groups"
   sign_up: "Sign up"
   sign_in: "Sign in"
   sign_out: "Sign out"
