--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -61,6 +61,7 @@ tr:
   cancel: "İptal"
   system_status: "Sistem Durumu"
   view_details: "Detayları Görüntüle"
+  add: "Ekle"
   new: "Yeni"
   show: "Göster"
   edit: "Düzenle"
@@ -93,6 +94,7 @@ tr:
   responsible: "Taşınır Kayıtçı"
   manager: "Müdür"
   change_role: "Rol Değiştir"
+  edit_user_groups: "Kullanıcı Gruplarını Düzenle"
   sign_up: "Kayıt Ol"
   sign_in: "Giriş Yap"
   sign_out: "Çıkış Yap"
